testsuite/tests/properties/invalid_unique/not_hashable.lkt
import common

class Example: FooNode implements TokenNode {
    @exported fun test(): Bool = node.token_start.singleton().unique()
}
